Coloquei um comentário no projeto

--- a/Mini-projeto/index.html
+++ b/Mini-projeto/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <!-- ESTE É UM SITE ANDROID -->
         <h1>Android Core &copy;</h1>
         <p>Android Core is a website dedicated to news, reviews, and guides about the Android operating system.</p>
         <nav>
