--- a/All tasks/Mini-projeto 2/index.html
+++ b/All tasks/Mini-projeto 2/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="[SITE: https://www.recantodasletras.com.br/poesias/3186743]">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
 
     </header>
 
@@ -29,7 +29,7 @@
 
 
 
-    <section class="image">
+    <section id="img001" class="image">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -67,7 +67,7 @@
 
 
 
-    <section class="image">
+    <section id="img002" class="image">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -103,7 +103,7 @@
         </p>
     </section>
     <footer>
-        Projeto criado por Gabriel&copy; - <a href="#">Github</a>
+        Projeto criado por Gabriel&copy; - <a href="https://github.com/MeJohnGabriel">Github</a>
     </footer>
 </body>
 
