--- a/Aulas/Aula 24/iframe001.html
+++ b/Aulas/Aula 24/iframe001.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estudos de iframe</title>
+    <style>
+      iframe {
+        display: block;
+        margin: auto;
+      }
+    </style>
   </head>
 
   <body>
@@ -12,15 +18,23 @@
     <!-- tamanho padrao 300 x 150 -->
     <iframe src="https://www.cursoemvideo.com/" frameborder="0" height="350px">
       <a href="https://www.cursoemvideo.com/">Link pro curso em video</a>
+      [Seu navegador NAO é compativel ):]
     </iframe>
-    <p>Acessando o meu repositorio do github:</p>
+    <p>Uma tabela sendo usada no meu iframe</p>
+    <!-- Tenha em mente p/ nao hosperdar tabelas em iframes -->
     <iframe
       height="500px"
-      src="https://www.cursoemvideo.com/"
+      width="500px"
+      src="/All tasks/EX - TabelaS/tabela-respo.html"
       frameborder="0"
-      scrolling="no"
+      scrolling=""
     >
       <a href="https://github.com/MeJohnGabriel">O github</a>
     </iframe>
+    <br />
+    <iframe
+      src="/Aulas/Aula 24/paginasextras/pagina001.html"
+      frameborder="0"
+    ></iframe>
   </body>
 </html>
