--- a/Aulas/Aula 24/iframe004.html
+++ b/Aulas/Aula 24/iframe004.html
@@ -6,12 +6,31 @@
     <title>Pag004</title>
     <style>
       body {
-        background-color: lightblue;
+        background-color: rgb(255, 255, 255);
         font-family: Arial, Helvetica, sans-serif;
       }
     </style>
   </head>
   <body>
-    <h1>Pag 004</h1>
+    <h1>Meu site principal</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, odio.
+      Tempore est sapiente ratione at repudiandae officiis placeat natus quasi
+      assumenda error corporis modi vel laboriosam quos quas, omnis blanditiis?
+    </p>
+    <iframe
+      src="paginasextras/pag006.html"
+      frameborder="1"
+      sandbox="allow-same-origin allow-forms allow-scripts"
+      referrerpolicy="no-referrer"
+    >
+      [Seu navegador nao e compativel]
+    </iframe>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis a
+      assumenda dolores voluptatibus provident aspernatur praesentium magni.
+      Quas sunt, dignissimos incidunt hic, animi porro quibusdam eaque dolore
+      minima dolorem quae.
+    </p>
   </body>
 </html>
